Updated by task 'AUTO_TM_MT_1741794284338'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/09821c683722b69f10f926decb96ad879eddff0e

--- a/c-legacy-releases/2024/09122024.md
+++ b/c-legacy-releases/2024/09122024.md
@@ -1,14 +1,14 @@
 ---
 title: 發行說明 - 2024 年 9 月 - 10月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: October 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 42cf0348-3fc1-4ec9-b12f-96bf395cadc6
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
 workflow-type: tm+mt
-source-wordcount: '3744'
+source-wordcount: '3741'
 ht-degree: 100%
 
 ---
@@ -64,13 +64,13 @@ ht-degree: 100%
 * [[!DNL Adobe Document Cloud]](#doc-cloud)
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [客戶資料管理 - 對話](#voices)
-* [Digital Experience 藍圖](#blueprints)
+* [數位體驗藍圖](#blueprints)
 * [Adobe 的認證](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
 ## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 的播放清單 (新功能！)
 
@@ -103,7 +103,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 發行日期：**2024 年 8 月 19 日**
 
@@ -129,7 +129,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -154,7 +154,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 * [[!DNL Experience Platform] Mobile SDK 發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)
 
-### 新 [!DNL Experience Platform]教學課程{#tutorials-aep}
+### [!DNL Experience Platform] 最新教學課程{#tutorials-aep}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Experience Platform] 教學課程。
 
@@ -189,7 +189,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
-如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -205,7 +205,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 * [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics/implementation/appmeasurement-updates)
 
-### 新 [!DNL Analytics]教學課程 {#tutorials-analytics}
+### [!DNL Analytics] 最新教學課程 {#tutorials-analytics}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Analytics] 教學課程。
 
@@ -214,7 +214,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 | 2024 年 9 月 | [在 Adobe Analytics 中使用[!UICONTROL 分類規則產生器]](https://experienceleague.adobe.com/zh-hant/docs/analytics-learn/tutorials/components/classifications/using-the-classification-rule-builder) | 影片 | 了解如何使用[!UICONTROL 分類規則產生器]，以自動在 Adobe Analytics 中套用規則型分類。 |
 
 
-### 新增 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
+### 新的 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
 
 [!DNL Analytics] 的新文章和現有文章的更新。
 
@@ -228,7 +228,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/analytics.png) [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -251,7 +251,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 ## ![圖示](/assets/analytics.png) [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -282,7 +282,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 * [[!DNL Experience Manager] 桌面應用程式發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-desktop-app/using/release-notes)
 * [[!DNL Experience Manager] Dispatcher 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-dispatcher/using/getting-started/release-notes)
 
-### 新 [!DNL Experience Manager]教學課程 {#tutorials-aem}
+### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
 [!DNL Experience Manager] 上的全新 [!DNL Experience Manager] 教學課程
 
@@ -428,7 +428,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * 請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)取得更新和協助
 
-### 新 [!DNL Journey Optimizer]教學課程 {#tutorials-ajo}
+### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Journey Optimizer] 教學課程。
 
@@ -471,8 +471,6 @@ Adobe Commerce 的新文章和現有文章的更新。
 * [Journey Orchestration 文件](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/journey-orchestration-home)
 
 * [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/release-notes)
-
-* [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration)
 
 * [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/documentation-updates)
 
