--- a/c-legacy-releases/2024/09142023.md
+++ b/c-legacy-releases/2024/09142023.md
@@ -1,13 +1,14 @@
 ---
 title: 發行說明 - 2024 年 8 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: August 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 356b0a6cdb0de2b19bdb9d64556bcf80e91faffa
-workflow-type: ht
-source-wordcount: '3068'
+exl-id: 9a5dd6fc-6c13-4411-8a8c-487f7d00585f
+source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
+workflow-type: tm+mt
+source-wordcount: '3065'
 ht-degree: 100%
 
 ---
@@ -27,9 +28,9 @@ ht-degree: 100%
 
 為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
-**提供意見回饋**
+**提供意見反應**
 
-請在每個頁面底部的快顯視窗搜尋「**_此內容是否實用？_**」。您的意見回饋會經過剪輯並傳送給內容作者。
+請在每個頁面底部的快顯視窗搜尋「**_此內容是否實用？_**」。您的意見反應會經過整理後傳遞給內容作者。
 
 **接收通知**
 
@@ -63,13 +64,13 @@ ht-degree: 100%
 * [[!DNL Adobe Document Cloud]](#doc-cloud)
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [客戶資料管理 - 對話](#voices)
-* [Digital Experience 藍圖](#blueprints)
+* [數位體驗藍圖](#blueprints)
 * [Adobe 的認證](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 的播放清單 (新功能！)
 
@@ -102,7 +103,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 發行日期：**2024 年 8 月 19 日**
 
@@ -128,7 +129,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -138,13 +139,13 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 | -----------| ---------- |
 | Slack 通知 | 您可以設定帳戶偏好，以便傳送 Experience Cloud 通知至 Slack。請參閱[訂閱 Slack 通知](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/account-preferences)以了解詳細資料。 |
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -152,7 +153,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 * [[!DNL Experience Platform] Mobile SDK 發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)
 
-### 新 [!DNL Experience Platform]教學課程{#tutorials-aep}
+### [!DNL Experience Platform] 最新教學課程{#tutorials-aep}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Experience Platform] 教學課程。
 
@@ -166,7 +167,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 7 月 | [[!DNL AEP - RT-CDP]  啟用 ([!DNL LinkedIn, Google Customer Match, Facebook]) - 支援的身分和傳送內容](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24608) | 新文章 | 了解當[!UICONTROL 沙箱中的[!UICONTROL 教戰手冊]選單遺失時]的解決方案。 |
+| 2024 年 7 月 | [[!DNL AEP - RT-CDP]  啟用 ([!DNL LinkedIn, Google Customer Match, Facebook]) - 支援的身分識別和傳送內容](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24608) | 新文章 | 了解當[!UICONTROL 沙箱中的[!UICONTROL 教戰手冊]選單遺失時]的解決方案。 |
 | 2024 年 7 月 | [為什麼在重設[!UICONTROL 沙箱]後一些 [!DNL AJO] [!UICONTROL 資料集]仍然可見](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24605) | 新文章 | 了解 [!DNL Adobe Experience Platform] 問題，即[!UICONTROL 沙箱]重設後，所有非 [!DNL AJO] 結構描述和資料集都會被刪除，但 [!DNL AJO] 模式和 [!UICONTROL 資料集]不會被刪除。 |
 | 2024 年 7 月 | [[!DNL AEP] - 關於[!UICONTROL 事件轉送]實例](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24661)的  [!DNL IP range whitelisting]  的建議 | 新文章 | 了解與 [!DNL AEP] 中 [!DNL IP addresses] [!DNL whitelisting] 相關的[!UICONTROL 事件轉送]的建議。 |
 
@@ -186,7 +187,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
-如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -229,7 +230,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 ## ![圖示](/assets/analytics.png) [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -239,7 +240,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 * [!DNL Customer Journey Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics)
 
-### 新 [!DNL Customer Journey Analytics]教學課程 {#tutorials-cja}
+### [!DNL Customer Journey Analytics] 最新教學課程 {#tutorials-cja}
 
 全新的 [!DNL Customer Journey Analytics] 教學課程
 
@@ -252,7 +253,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 ## ![圖示](/assets/analytics.png) [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -282,7 +283,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 * [[!DNL Experience Manager] 桌面應用程式發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-desktop-app/using/release-notes)
 * [[!DNL Experience Manager] Dispatcher 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-dispatcher/using/getting-started/release-notes)
 
-### 新 [!DNL Experience Manager]教學課程 {#tutorials-aem}
+### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
 [!DNL Experience Manager] 上的全新 [!DNL Experience Manager] 教學課程
 
@@ -375,7 +376,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### 最新 Campaign 產品版本
 
-* [!DNL Web User Interface]：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-Hant/docs /campaign-web/v8/campaign-web-home)
+* [!DNL Web User Interface]：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs /campaign-web/v8/campaign-web-home)
 
 * [!DNL Campaign]v8：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/releases/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home)
 
@@ -406,7 +407,7 @@ New articles and updates to existing articles for [!DNL Campaign].
 
 ### [!DNL Campaign] 說明資源
 
-* [!DNL Web User Interface]：**9 月 3 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-Hant/docs /campaign-web/v8/campaign-web-home)
+* [!DNL Web User Interface]：**9 月 3 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs /campaign-web/v8/campaign-web-home)
 
 * [!DNL Campaign]v8：**9 月 3 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/releases/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home)
 
@@ -418,7 +419,7 @@ New articles and updates to existing articles for [!DNL Campaign].
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -426,7 +427,7 @@ New articles and updates to existing articles for [!DNL Campaign].
 
 * 請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)取得更新和協助
 
-### 新 [!DNL Journey Optimizer]教學課程 {#tutorials-ajo}
+### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Journey Optimizer] 教學課程。
 
@@ -467,8 +468,6 @@ New articles and updates to existing articles for [!DNL Campaign].
 * [Journey Orchestration 文件](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/journey-orchestration-home)
 
 * [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/release-notes)
-
-* [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration)
 
 * [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/documentation-updates)
 
@@ -581,7 +580,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 +++## ![圖示](/assets/experience-league.png) Adobe 內容供應鏈{#content-supply-chain}
 
-有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
+如需有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
 
 <!-- +++Details
 
@@ -658,4 +657,3 @@ The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/
 And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
-
