--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -6,9 +6,9 @@ last-update: January 2025
 author: mfrei
 mini-toc-levels: 2
 exl-id: 2a47d042-6a1c-4896-8935-038f7fda703e
-source-git-commit: 055991880c37678132dcc9c4ef831b786e23f19a
-workflow-type: ht
-source-wordcount: '4139'
+source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
+workflow-type: tm+mt
+source-wordcount: '4136'
 ht-degree: 100%
 
 ---
@@ -491,8 +491,6 @@ New tutorials published for Adobe [!DNL Journey Optimizer] on Experience League.
 * [Journey Orchestration 文件](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/journey-orchestration-home)
 
 * [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/release-notes)
-
-* [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration)
 
 * [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/documentation-updates)
 
