--- a/c-legacy-releases/2024/05152024.md
+++ b/c-legacy-releases/2024/05152024.md
@@ -1,14 +1,14 @@
 ---
 title: 發行說明 - 2024 年 5 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: May 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 1e7e2846-50c0-4597-b01d-006ccdc1903e
-source-git-commit: d8785cce1fc732456f7f7de7a82fc5dbf055c185
-workflow-type: ht
-source-wordcount: '4824'
+source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
+workflow-type: tm+mt
+source-wordcount: '4821'
 ht-degree: 100%
 
 ---
@@ -61,9 +61,9 @@ ht-degree: 100%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 活動
 
@@ -113,7 +113,7 @@ ht-degree: 100%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 發行日期：**2024 年 4 月 11 日**
 
@@ -140,19 +140,19 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
 未更新。
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -174,8 +174,8 @@ ht-degree: 100%
 | 2024 年 5 月 | [!DNL Experience Platform] | [匿名輪廓和體驗事件過期](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/data-hygiene/pseudonymous-profile-and-event-expiration) | 影片 | 了解如何在 Experience Platform 中設定匿名輪廓和事件的過期設定及其優點。 |
 | 2024 年 5 月 | 資料收集[!DNL Experience Platform] | [堆疊標記規則](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/data-collection/tags/stack-rules) | 影片 | 了解如何堆疊如何規定標記屬性。規則堆疊會使用標記規則事件中的順序功能進行規則排序，以便您可以管理可擴展的標記實施。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [設定資料流](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-datastream) | 文章 | 了解如何在 Adobe Experience Platform Web SDK 中設定資料流。 |
-| 2024 年 5 月 | [!DNL Experience Platform] | [為 Web 資料建立 XDM 架構](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-schemas) | 文章 | 了解如何在 Adob&#x200B;&#x200B;e Experience Platform Data Collection 介面中為 Web 資料建立 XDM 架構。 |
-| 2024 年 5 月 | [!DNL Experience Platform] | [設定身分命名空間](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-identities)。 | 文章 | 了解如何設定身分命名空間，以配合 Adob&#x200B;&#x200B;e Experience Platform Web SDK 使用。 |
+| 2024 年 5 月 | [!DNL Experience Platform] | [為 Web 資料建立 XDM 結構描述](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-schemas) | 文章 | 了解如何在 Adob&#x200B;&#x200B;e Experience Platform Data Collection 介面中為 Web 資料建立 XDM 結構描述。 |
+| 2024 年 5 月 | [!DNL Experience Platform] | [設定身分識別命名空間](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/initial-configuration/configure-identities)。 | 文章 | 了解如何設定身分識別命名空間，以配合 Adob&#x200B;&#x200B;e Experience Platform Web SDK 使用。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [使用 Experience Platform Debugger 驗證 Web SDK 實施](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/validate-with-debugger) | 影片 | 了解如何使用 Adobe Experience Platform Debugger 驗證您的 Adobe Experience Platform Web SDK 實施。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [使用 Experience Platform Assurance 驗證 Web SDK 實施](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/validate-with-assurance) | 文章 | 了解如何使用 Adob&#x200B;&#x200B;e Experience Platform Assurance 驗證您的 Platform Web SDK 實施。本課程是「使用 Web SDK 實施 Adob&#x200B;&#x200B;e Experience Cloud」教學課程的一部分。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [建立標記規則](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/create-tag-rule) | 文章 | 了解如何使用標記規則透過 XDM 物件將事件傳送至 Adob&#x200B;&#x200B;e Experience Platform Edge Network。 |
@@ -185,8 +185,8 @@ ht-degree: 100%
 | 2024 年 5 月 | [!DNL Experience Platform] | [使用 Platform Web SDK 資料設定事件轉送](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/event-forwarding/setup-event-forwarding) | 影片 | 了解如何將事件轉送與 Adob&#x200B;&#x200B;e Experience Platform Web SDK 資料一起使用。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [使用 Platform Web SDK 設定同意](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/consent-management/setup-consent) | 文章 | 了解如何設定 Adob&#x200B;&#x200B;e Experience Platform Web SDK 標記擴充功能的隱私權設定。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [使用 Platform Web SDK 設定 Adobe Target](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/applications-setup/setup-target) | 文章 | 瞭解如何使用 Adobe Experience Platform Web SDK 實施 Adobe Target。了解如何提供體驗以及如何將其他參數傳遞給 Target。 |
-| 2024 年 5 月 | [!DNL Experience Platform] | [建立資料元素](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/create-data-elements) | 文章 | 了解如何在 Luma 展示網站的內容、商業和身分資料標記中建立資料元素。 |
-| 2024 年 5 月 | [!DNL Experience Platform] | [建立身分](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/create-identities) | 文章 | 了解如何使用 Adobe Experience Platform Web SDK 擷取身分。在 Luma 展示網站上擷取未經驗證和經過驗證的身分資料。 |
+| 2024 年 5 月 | [!DNL Experience Platform] | [建立資料元素](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/create-data-elements) | 文章 | 了解如何在 Luma 展示網站的內容、商業和身分識別資料標記中建立資料元素。 |
+| 2024 年 5 月 | [!DNL Experience Platform] | [建立身分識別](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/implement-web-sdk/tags-configuration/create-identities) | 文章 | 了解如何使用 Adobe Experience Platform Web SDK 擷取身分識別。在 Luma 展示網站上擷取未經驗證和經過驗證的身分識別資料。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [Adobe Experience Platform 的關鍵功能](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/intro-to-platform/key-capabilities) | 更新的影片 | 了解 Experience Platform 的關鍵功能，以及這些功能如何為您的業務帶來價值。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [Adobe Experience Platform 和 Adob&#x200B;&#x200B;e Experience Cloud 應用程式之間的整合](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/intro-to-platform/integrations-with-experience-cloud-applications) | 影片 | 了解 Experience Platform 如何與 Experience Cloud 應用程式整合。 |
 | 2024 年 5 月 | [!DNL Experience Platform] | [Adobe Experience Platform 主要使用案例](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/intro-to-platform/key-use-cases) | 影片 | 了解 Experience Platform 五個主要使用案例的概觀 - 智慧型重新吸引、「不要失去」行銷活動、客戶轉換最佳化、情境識別和一次性價值到終身價值。 |
@@ -250,7 +250,7 @@ ht-degree: 100%
 
 {style="table-layout:auto"}
 
-### 新增 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
+### 新的 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
 
 [!DNL Analytics] 的新文章和現有文章的更新。
 
@@ -473,7 +473,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 4 月 | [追蹤工作流程失敗 (顯示 `broadlogRcp` 和 [!DNL Oracle] 錯誤)](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24054) | 新文章 | 了解如何修正目標對應以對儲存追蹤記錄的資料架構使用追蹤記錄資料架構並儲存修改資料。 |
+| 2024 年 4 月 | [追蹤工作流程失敗 (顯示 `broadlogRcp` 和 [!DNL Oracle] 錯誤)](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24054) | 新文章 | 了解如何修正目標對應以對儲存追蹤記錄的資料結構描述使用追蹤記錄資料結構描述並儲存修改資料。 |
 | 2024 年 4 月 | [[!DNL Adobe Campaign Standard]：在 [!DNL Adobe Analytics]中，來自 [!DNL ACS] 的膨脹 [!DNL Campaign] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24076) | 新文章 | 了解如何解決 [!DNL Adobe Campaign Standard (ACS)] 問題；資料在 [!DNL Campaign] 和 [!DNL Analytics] 中有所不同。其中一個重要步驟是驗證 [!DNL ACS], `kpiReconciliation` 和 `kpiSharing` 中的兩個工作流程都在處理目前日期的資料。 |
 | 2024 年 4 月 | [預定的波段在幾秒鐘內發送，而不是幾小時內發送 - [!DNL Adobe Campaign Classic]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24109) | 新文章 | 了解在幾秒鐘 (而不是幾小時) 內發送預定電子郵件波段時產生的問題解決方案。 |
 
@@ -491,7 +491,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -533,8 +533,6 @@ New or updated videos tutorials published for Adobe Campaign.
 * [Journey Orchestration 文件](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/journey-orchestration-home)
 
 * [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/release-notes)
-
-* [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration)
 
 * [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/documentation-updates)
 
