--- a/c-legacy-releases/2024/06122024.md
+++ b/c-legacy-releases/2024/06122024.md
@@ -1,14 +1,14 @@
 ---
 title: 發行說明 - 2024 年 6 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: June 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: c9aed4a0-f4fb-4274-8327-c7f968ae8646
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
 workflow-type: tm+mt
-source-wordcount: '3795'
+source-wordcount: '3792'
 ht-degree: 100%
 
 ---
@@ -37,7 +37,7 @@ ht-degree: 100%
 * [[!DNL Experience League] 活動與最新訊息](#events)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
-* [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
+* [[!DNL Adobe Experience Cloud] - 中央介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
 * [[!DNL Adobe Real-Time Customer Data Platform]](#rtcdp)
 * [[!DNL Adobe Analytics]](#analytics)
@@ -61,9 +61,9 @@ ht-degree: 100%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 活動
 
@@ -112,7 +112,7 @@ ht-degree: 100%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 如需最新發行說明，請參閱：
 
@@ -127,19 +127,19 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
 未更新。
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -147,7 +147,7 @@ ht-degree: 100%
 
 * [[!DNL Experience Platform] Mobile SDK 發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)
 
-### 新 [!DNL Experience Platform]教學課程{#tutorials-aep}
+### [!DNL Experience Platform] 最新教學課程{#tutorials-aep}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Experience Platform] 教學課程。
 
@@ -183,7 +183,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
-如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -199,7 +199,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 * [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics/implementation/appmeasurement-updates)
 
-### 新 [!DNL Analytics]教學課程 {#tutorials-analytics}
+### [!DNL Analytics] 最新教學課程 {#tutorials-analytics}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Analytics] 教學課程。
 
@@ -212,7 +212,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 {style="table-layout:auto"}
 
-### 新增 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
+### 新的 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
 
 [!DNL Analytics] 的新文章和現有文章的更新。
 
@@ -226,7 +226,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 ## ![圖示](/assets/analytics.png) [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -236,7 +236,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 * [!DNL Customer Journey Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics)
 
-### 新 [!DNL Customer Journey Analytics]教學課程 {#tutorials-cja}
+### [!DNL Customer Journey Analytics] 最新教學課程 {#tutorials-cja}
 
 全新的 [!DNL Customer Journey Analytics] 教學課程
 
@@ -249,7 +249,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 ## ![圖示](/assets/analytics.png) [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -441,7 +441,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -483,8 +483,6 @@ New tutorials published for Adobe [!DNL Journey Optimizer] on Experience League.
 * [Journey Orchestration 文件](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/journey-orchestration-home)
 
 * [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/release-notes)
-
-* [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration)
 
 * [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/documentation-updates)
 
