--- a/c-legacy-releases/2024/07172024.md
+++ b/c-legacy-releases/2024/07172024.md
@@ -1,14 +1,14 @@
 ---
 title: 發行說明 - 2024 年 7 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: July 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 86c96f2a-3fb7-4724-9cbd-308b9ec06f1d
-source-git-commit: 000f2b982eb85d2db50d10c6afac109a2399d538
-workflow-type: ht
-source-wordcount: '3309'
+source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
+workflow-type: tm+mt
+source-wordcount: '3306'
 ht-degree: 100%
 
 ---
@@ -57,13 +57,13 @@ ht-degree: 100%
 * [[!DNL Adobe Document Cloud]](#doc-cloud)
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [客戶資料管理 - 對話](#voices)
-* [Digital Experience 藍圖](#blueprints)
+* [數位體驗藍圖](#blueprints)
 * [Adobe 的認證](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
 ## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 活動
 
@@ -79,7 +79,7 @@ ht-degree: 100%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 如需最新發行說明，請參閱：
 
@@ -94,7 +94,7 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -114,7 +114,7 @@ ht-degree: 100%
 
 * [[!DNL Experience Platform] Mobile SDK 發行說明](https://developer.adobe.com/client-sdks/documentation/release-notes/)
 
-### 新 [!DNL Experience Platform]教學課程{#tutorials-aep}
+### [!DNL Experience Platform] 最新教學課程{#tutorials-aep}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Experience Platform] 教學課程。
 
@@ -153,7 +153,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
-如需 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -169,7 +169,7 @@ New articles and updates to existing articles for [!DNL Experience Platform].
 
 * [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/zh-hant/docs/analytics/implementation/appmeasurement-updates)
 
-### 新 [!DNL Analytics]教學課程 {#tutorials-analytics}
+### [!DNL Analytics] 最新教學課程 {#tutorials-analytics}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Analytics] 教學課程。
 
@@ -197,7 +197,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 ## ![圖示](/assets/analytics.png) [!DNL Customer Journey Analytics] {#cja}
 
-如需 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -207,7 +207,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 * [!DNL Customer Journey Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics)
 
-### 新 [!DNL Customer Journey Analytics]教學課程 {#tutorials-cja}
+### [!DNL Customer Journey Analytics] 最新教學課程 {#tutorials-cja}
 
 全新的 [!DNL Customer Journey Analytics] 教學課程
 
@@ -224,7 +224,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 ## ![圖示](/assets/analytics.png) [!DNL Streaming Media Analytics] {#sma}
 
-如需 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -254,7 +254,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 * [[!DNL Experience Manager:] 桌面應用程式發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-desktop-app/using/release-notes)
 * [[!DNL Experience Manager:] Dispatcher 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-dispatcher/using/getting-started/release-notes)
 
-### 新 [!DNL Experience Manager]教學課程 {#tutorials-aem}
+### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
 [!DNL Experience Manager:] 上的全新 [!DNL Experience Manager] 教學課程
 
@@ -358,7 +358,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### 最新 Campaign 產品版本
 
-* [!DNL Web User Interface]：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs /campaign-web/v8/campaign-web-home)
+* [!DNL Web User Interface]：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-Hant/docs /campaign-web/v8/campaign-web-home)
 
 * [!DNL Campaign]v8：**7 月 30 日** - [發行說明](https://experienceleague.adobe.com/zh-hant/docs/campaign-web/v8/release-notes/release-notes) | [產品文件](https://experienceleague.adobe.com/zh-hant/docs/campaign/campaign-v8/campaign-home)
 
@@ -410,7 +410,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 **7 月 30：** 了解 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)中最新功能、改善功能和修正。
 
-### 新 [!DNL Journey Optimizer]教學課程 {#tutorials-ajo}
+### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
 在 Experience League 上發佈的全新 Adobe [!DNL Journey Optimizer] 教學課程。
 
@@ -445,8 +445,6 @@ New or updated videos tutorials published for Adobe Campaign.
 * [Journey Orchestration 文件](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/journey-orchestration-home)
 
 * [發行說明](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/release-notes)
-
-* [作法影片](https://experienceleague.adobe.com/zh-hant/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration)
 
 * [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/journeys/using/release-notes/documentation-updates)
 
