Updated by task 'FY25_March_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/9bae2ace4b03080dcb5568d029a7cec530948547

--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -7,7 +7,7 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 2a47d042-6a1c-4896-8935-038f7fda703e
 source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4136'
 ht-degree: 100%
 
@@ -356,7 +356,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2024 年 12 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/tools/quality-patches-tool/patches-available-in-qpt/patches-available-in-qpt-tool-overview) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.52、[!DNL QPT] 1.1.53、[!DNL QPT] 1.1.54、[!DNL QPT] 1.1.55、[!DNL QPT] 1.1.56 與 [!DNL QPT] 1.1.57 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
+| 2024 年 12 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/tools/quality-patches-tool/patches-available-in-qpt/patches-available-in-qpt-tool-overview) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.52、[!DNL QPT] 1.1.53、[!DNL QPT] 1.1.54、[!DNL QPT] 1.1.55、[!DNL QPT] 1.1.56 與 [!DNL QPT] 1.1.57 中可用之修補程式的新文章已發佈，您可以前往其各自的區段參閱。 |
 | 2024 年 11 月 | [Adobe Commerce 2.4.6-p8 中的  [!DNL GraphQL] `placeOrder` [!DNL API]  向後不相容變更](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/backwards-incompatible-changes-for-graphql-placeorder-api-in-adobe-commerce-2-4-6-p8) | 新文章 | 本文提供了針對已知的 Adobe Commerce 2.4.6-p8 版本的修補程式，該問題出現在雲端和內部部署安裝環境中，`placeOrder` [!DNL GraphQL API] 未能傳回預期的錯誤回應，這個問題在先前的 2.4.6 修補版本中已經出現過。 |
 | 2024 年 11 月 | [解決 Adobe Commerce 中  [!DNL PHP]  8.2 升級至 8.3 版本的  [!DNL New Relic]  代理程式問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25301) | 新文章 | 了解如何解決當您將 [!DNL PHP] 從 8.2 升級至 8.3 版本後，發現 [!DNL New Relic] 代理程式在 Adobe [!DNL Commerce] 環境中無法正常運作的問題。 |
 | 2024 年 11 月 | [[!DNL Security Scan Tool] 即使已套用修補程式，仍然傳回 *[!DNL APSByy-xx security updates available]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25321) | 新文章 | 了解如何解決即使您已經套用修補程式，[!DNL Security Scan Tool] 仍對 Adobe [!DNL Commerce] 和 [!DNL Magento Open Source] 報告 `APSByy-xx security updates available` 的問題。 |
@@ -646,7 +646,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
 | 2025 年 1 月 | Acrobat、Adobe Express | [設計新頁面](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/add-custom-page) | 影片 | 了解如何使用 Adobe Express 打造新的 PDF 專業頁面。透過設計新頁面，您只需幾分鐘便能創造出與眾不同、具有專業外觀的品牌客製化內容。本影片教學使用新的「[工作區體驗](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace)」。 |
-| 2025 年 1 月 | Acrobat、Adobe Express | [即時共同作業](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/collaborate.html) | 影片 | 隨著遠端工作無所不在，無縫共同作業對於快速和大規模地交付內容至關重要。隨時隨地即時收集註釋、共同處理回應及追蹤文件的進度，推展您的專案。了解如何建立一個不僅能提升效率，還能提高內容品質的文件審查程序。本影片教學使用新的「[工作區體驗](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace)」。 |
+| 2025 年 1 月 | Acrobat、Adobe Express | [即時共同作業](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/collaborate.html?lang=zh-hant) | 影片 | 隨著遠端工作無所不在，無縫共同作業對於快速和大規模地交付內容至關重要。隨時隨地即時收集註釋、共同處理回應及追蹤文件的進度，推展您的專案。了解如何建立一個不僅能提升效率，還能提高內容品質的文件審查程序。本影片教學使用新的「[工作區體驗](https://experienceleague.adobe.com/zh-hant/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace)」。 |
 
 如需 [!DNL Document Cloud] 教學課程，請參閱：
 
