--- a/c-legacy-releases/2025/02122025.md
+++ b/c-legacy-releases/2025/02122025.md
@@ -5,10 +5,11 @@ doc-type: release notes
 last-update: February 2025
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: f9ecc1479d7f2179430224d26d6b2914a8eeda53
-workflow-type: tm+mt
+exl-id: 617cf24b-d069-4dff-8ac0-9dacedef3f23
+source-git-commit: 421ec1202cc2521a16fa632ba752002b4b7acfe4
+workflow-type: ht
 source-wordcount: '3511'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -28,7 +29,7 @@ ht-degree: 99%
 
 使用這些連結尋找應用程式發行說明、事件、新教學課程，以及最新的知識庫支援文章：
 
-* [[!DNL Experience League] 活動與最新訊息](#events)
+* [[!DNL Experience League] 活動和更新](#events)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 中央介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -141,7 +142,7 @@ ht-degree: 99%
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2025 年 2 月 | [!DNL AI Assistant] | [透過 AI 助理獲取營運深入解析](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/ai-assistant/operational-insights) | 新影片 | 了解如何使用 [!DNL AI Assistant] 在 Adobe [!DNL Experience Platform] 中發現客群、資料集、結構描述、目標和歷程等商業物件的營運深入解析。 |
-| 2025 年 2 月 | [!DNL Experience Platform] | [身份識別圖表連結規則 - 圖表模擬](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/identities/graph-linking-rules/graph-simulation) | 新影片 | 了解如何使用圖表模擬器測試 [!DNL Experience Platform] 中的身份識別圖表連結規則。試驗不同的情境，並使用「_每個圖表的唯一設定_」和優先設定驗證您的業務所需規則，以避免圖表崩潰。 |
+| 2025 年 2 月 | [!DNL Experience Platform] | [身分識別圖連結規則 - 圖表模擬](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/identities/graph-linking-rules/graph-simulation) | 新影片 | 了解如何使用圖表模擬器測試 [!DNL Experience Platform] 中的身分識別圖連結規則。試驗不同的情境，並使用「_每個圖表的唯一設定_」和優先設定驗證您的業務所需規則，以避免圖表崩潰。 |
 
 ### 新的 [!DNL Experience Platform] 支援知識庫{#kb-aep}
 
@@ -160,7 +161,7 @@ ht-degree: 99%
 | 2025 年 1 月 |  [!DNL AEP]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25468)中的[[!DNL Jupyter Notebooks] 環境存取問題 | 新文章 | 了解如何解決 Adobe Experience Platform 中的 [!DNL Jupyter Notebooks] 環境[!DNL Data Science Workspace]變得無法存取並顯示逾時錯誤的問題。 |
 | 2025 年 1 月 | [ [!DNL Adobe Launch ("Tags")] 版本在 [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25531)中無法傳播的問題 | 新文章 | 了解如何解決 [!DNL Adobe Launch] (Experience Platform 標記) 版本無法正確傳播的問題，確保能有效地對所有網站訪客顯示更新內容。 |
 | 2025 年 1 月 | [了解  [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25522) 中的  [!DNL GDPR]  隱私要求延遲 | 新文章 | 了解如何解決處理在 [!DNL Adobe Experience Platform] 內刪除行銷活動資料的 [!DNL GDPR] 隱私要求時的延遲問題。 |
-| 2025 年 1 月 | [[!DNL Adobe Experience Platform]：失敗的身份識別計數與目標啟用似乎不成比例](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25658) | 新文章 | 了解如何解決失敗的身份識別計數與目標啟用似乎不成比例的問題。 |
+| 2025 年 1 月 | [[!DNL Adobe Experience Platform]：失敗的身分識別計數與目標啟用似乎不成比例](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25658) | 新文章 | 了解如何解決失敗的身分識別計數與目標啟用似乎不成比例的問題。 |
 
 +++
 
@@ -334,7 +335,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2025 年 1 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/tools/quality-patches-tool/patches-available-in-qpt/patches-available-in-qpt-tool-overview) | 新文章 | 有關如何套用 [!DNL QPT] 1.1.57 和 [!DNL QPT] 1.1.58 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
+| 2025 年 1 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/tools/quality-patches-tool/patches-available-in-qpt/patches-available-in-qpt-tool-overview) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.57 和 [!DNL QPT] 1.1.58 中可用之修補程式的新文章已發佈，您可以前往其各自的區段參閱。 |
 | 2025 年 1 月 | 雲端基礎結構上有關 Adobe Commerce 的 [*[!DNL Resolve Database Restore Failure: ERROR 1105 (HY000) - Maximum Writeset Size Exceeded]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25651) | 新文章 | 了解如何解決在 [!DNL Galera] 叢集上復原 [!DNL MariaDB] 備份時可能會由於 2GB 的交易大小限制而遭遇 `Maximum Writeset Size Exceeded` 錯誤的問題。 |
 | 2025 年 1 月 | [[!DNL Fastly] 雲端基礎結構上 Adobe Commerce 中的後端檢查](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25574) | 新文章 | 了解如何解決進行 [!DNL Fastly] 測試工具的後端檢查時，可能會顯示與可快取性和代理鍵相關的錯誤。 |
 | 2025 年 1 月 | [[!DNL Git] 雲端基礎結構上的 Adob&#x200B;&#x200B;e Commerce 中的強制推送權限問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25609) | 新文章 | 了解如何解決在雲端基礎結構上的 Adobe Commerce 中嘗試強制推送作業時遇到的權限相關挑戰。 |
@@ -678,4 +679,3 @@ The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/
 And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
-
